Fixing spacing of sections

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@
   --secondary--color: black;
   --dark--text: black;
   --light--text: white;
-  cursor: none;
+  /* cursor: none; */
 }
 
 body {
